--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t bermana10/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t bermana10/react-test -f ./client/Dockerfile ./client
 
 script:
   - docker run -e CI=true bermana10/react-test npm test -- --coverage
