--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,7 @@ sudo: required
 services:
   - docker
 
-before_install:
-  - docker build -t bermana10/react-test -f ./client/Dockerfile ./client
-
 script:
-  - docker run -e CI=true bermana10/react-test npm test -- --coverage
-
-after_success:
   - docker build -t bermana10/multi-client ./client
   - docker build -t bermana10/multi-nginx ./nginx
   - docker build -t bermana10/multi-server ./server
@@ -20,3 +14,16 @@ after_success:
   - docker push bermana10/multi-nginx
   - docker push bermana10/multi-server
   - docker push bermana10/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-1-306476627547
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
