--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,18 @@ sudo: required
 services:
   - docker
 
+before_install:
+  - docker build -t bermana10/react-test -f /home/Users/Admin/complex/client/Dockerfile.dev ./client
+
+
 script:
+  - docker run -e CI=true bermana10/react-test npm test -- --coverage
+
+after_success:
+  - docker build -t bermana10/multi-client ./client
   - docker build -t bermana10/multi-nginx ./nginx
   - docker build -t bermana10/multi-server ./server
   - docker build -t bermana10/multi-worker ./worker
-  - docker build -t bermana10/multi-client ./client
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
@@ -14,4 +21,3 @@ script:
   - docker push bermana10/multi-nginx
   - docker push bermana10/multi-server
   - docker push bermana10/multi-worker
-
