--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -f ./client/Dockerfile.dev ./client
+  - docker build -t bermana10/multi-client -f "C:\Users\Admin\complex\client\Dockerfile.dev" ./client
 
 
 script:
