--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,11 @@ sudo: required
 services:
   - docker
 
-before_install:
-  - docker build -t bermana10/multi-client -f "C:\Users\Admin\complex\client\Dockerfile.dev" "C:\Users\Admin\complex\client"
-
-
 script:
-  - docker run -e CI=true bermana10/react-test npm test -- --coverage
-
-after_success:
-  - docker build -t bermana10/multi-client ./client
   - docker build -t bermana10/multi-nginx ./nginx
   - docker build -t bermana10/multi-server ./server
   - docker build -t bermana10/multi-worker ./worker
+  - docker build -t bermana10/multi-client ./ser
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
@@ -21,3 +14,4 @@ after_success:
   - docker push bermana10/multi-nginx
   - docker push bermana10/multi-server
   - docker push bermana10/multi-worker
+
