--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - docker build -t bermana10/multi-nginx ./nginx
   - docker build -t bermana10/multi-server ./server
   - docker build -t bermana10/multi-worker ./worker
-  - docker build -t bermana10/multi-client ./ser
+  - docker build -t bermana10/multi-client ./client
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
