--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t bermana10/multi-client -f ./ser/Dockerfile.dev ./ser
+  - docker build -t bermana10/react-test -f ./ser/Dockerfile.dev ./ser
 
 
 script:
